--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,9 @@
 
-// service section start 
+// service section start '
+
+body{
+    background: red;
+}
 .service { 
     .single-service {
         padding: 50px 40px;
