--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,13 +4,14 @@
     left: 0;
     top: 0;
     width: 100%;
-    nav { 
+    .mobile-menu { 
         ul { 
             display: flex;
             justify-content: end;
             li { 
                 margin-left: 35px;
                 padding: 60px 0;
+                position: relative;
                 a { 
                     color: $body-color;
                     font-size: $base-font-size;
@@ -22,6 +23,30 @@
                         color: #00c6d1;
                         font-weight: 600;
                     }
+                    .submenu {
+                        visibility: visible;
+                        opacity: 1;
+                        top: 100%;
+                    }
+                }
+                .submenu {
+                    position: absolute;
+                    background: #f9fbfb;
+                    top: 100%;
+                    width: 200px;
+                    display: block;
+                    visibility: hidden;
+                    transition: .3s;
+                    opacity: 0;
+                    li { 
+                        padding: 10px 0;
+                        a {
+                            color: $body-color;
+                            font-size: $base-font-size;
+                            transition: .3s;
+                            font-weight: 600;
+                        }
+                    }
                 }
             }
         }
@@ -32,10 +57,6 @@
             float: right;
             margin-left: 10px;
             cursor: pointer;
-            display: none;
-        }
-        #check { 
-            display: none;
         }
     }
     .menu-right {
@@ -52,6 +73,64 @@
         }
         a.menu-btn { 
             margin-left: 15px;
+        }
+    }
+    .mobile-btn {
+        padding: 5px;
+        border: 2px solid #0872b9;
+        display: none;
+        i {            
+        color: #00c6d1;
+        font-size: 20px;
+        }
+        @media (max-width:991px) {
+            display: block;
+        }
+    }
+    
+}
+.responsive-menu {
+    @media (max-width:991px) {
+        position: absolute;
+        left: 0;
+        top: 100%;
+        background: #000;
+        padding: 20px;
+        width: 100%;
+        visibility: hidden;
+        transition: all .4s ease;
+        opacity: 0;
+        transform: scaleX(0);
+        transform-origin: left;
+        &.active {
+            visibility: visible;
+            opacity: 1;
+            transform: scaleX(1);
+        }
+        .mobile-menu {
+            ul {
+                display: block;
+                li {
+                    padding: 5px 0;
+                    margin-left: 0px;
+                    a {
+                        color: $white
+                    }
+                    .submenu {
+                        position: static;
+                        background: #000;
+                        visibility: visible;
+                        opacity: 1;
+                        padding-left: 20px;
+                        li { 
+                            padding: 10px 0;
+                            a {
+                                color: $white;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
