--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,7 +24,13 @@
 @import "layout/navigation";
 @import "layout/hero-slider";
 
+
+//page
 @import "pages/home";
+@import "pages/about";
+@import "pages/contact";
+@import "pages/category";
+
 
 
 
