--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,7 +17,6 @@
             box-shadow: 0px 5px 15px 0px rgba(68, 68, 68, 0.1);
             display: inline-block;
             margin-bottom: 40px;
-            border-radius: 50%;
         }
         .service-content {
             h4 {
@@ -28,6 +27,33 @@
 
         }
     }
+    .service-page02 {
+        display: flex;
+        padding: 0;
+        align-items: center;
+        text-align: start;
+        border-radius: 10px;
+        background-color: #ffff;
+        box-shadow: none;
+        .service-icon {
+            margin-bottom: 0;
+            width: 32%;
+        }
+        .service-content {
+            margin-left: 15px;
+            h4 {
+                margin-bottom: 15px;
+            }
+        }
+    }
+}
+.service-area02 {
+    background: #ffff;
+    .service-border {
+        border-top: 1px solid #eceeee;
+        padding-top: 50px;
+    }
+
 }
 // service section end 
 
@@ -66,9 +92,19 @@
                 height: unset;
                 margin-bottom: 15px;
             }
-            .new-product-content {
+        }
+    }
+    @media (min-width:1500px) {
+        .new-product-active {
+            .owl-nav {
+                position: absolute;
+                top: 50%;
+                left: -5%;
+                transform: translateY(-50%);
+                .owl-next {
+                    left: 100%;
+                }
             }
-
         }
     }
     .new-product-active {
@@ -226,17 +262,27 @@
     }
 }
 // counter area start end
+
+// hero counter section start (idex-02)
+.hero-counter {
+    margin-top: -100px;
+    z-index: 111;
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+.hero-conter-wrapper {
+    padding: 50px 55px;
+    background: #ffff;
+    box-shadow: 0px 5px 15px 0px rgba(85, 85, 85, 0.1);    
+}
 .customer-satisfiction {
     display: flex;
-    background: #ffff;
-    box-shadow: 0px 0px 15px 0px rgba(85, 85, 85, 0.1);
     li {
         display: flex;
         text-align: center;
-        padding: 55px 50px;
-        &:first-child {
-            background: #fbfbfb;
-        }
+        align-items: center;
+        background: #ffff;
         .satisfiction-img {
             margin-right: 18px;
         }
@@ -263,11 +309,49 @@
         }
         }
     }
-
 }
-// hero counter section start (idex-02)
+.counter-2 {
+    background: linear-gradient( -87deg, rgb(0,222,216) 0%, rgb(0,167,213) 100%);
+    box-shadow: 0px 5px 15px 0px rgba(85, 85, 85, 0.1);
+}
+.single-counter-2 {
+    display: flex;
+    align-items: center;
+    .counter-number {
+        margin-right: 20px;
+        h3 {
+            font-size: 35px;
+            font-weight: 600;
+            line-height: 27px;
+            color: white;
+            height: 130px;
+            width: 130px;
+            border-radius: 50%;
+            border: 5px solid #d1fdfc;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+    .counter-details {
+        h4 {
+            font-size: 22px;
+            line-height: 27px;
+            font-weight: 600;
+            color: #ffff;
+        }
+        p {
+            font-size: 15px;
+            line-height: 27px;
+            color: #eeeded;
+        }
+    }
+}
 
 // hero counter section end (idex-02)
+
+
 
 // Opinion area start 
 
@@ -278,6 +362,8 @@
     border-radius: 5px;
     border: 1px solid #ebebeb;  
     position: relative;
+    margin-top: 45px;
+    transition: all .5s ease;
     .opinion-content {
         h4 { 
             font-size: 16px;
@@ -298,6 +384,8 @@
         position: absolute;
         top: 42px;
         right: 42px;
+        transition: all .4s ease;
+ 
     }
     .opinion-img {
         position: absolute;
@@ -308,7 +396,35 @@
         border-radius: 50%;
         border: 1px solid #ebebeb;
     }
+    &::after {
+        content: "";
+        position: absolute;
+        height: 5px;
+        width: 0;
+        background: none;
+        left: 0;
+        bottom: 0;
+        transition: all .4s ease;
+    }
+
 }
+// active sectin 
+.opinion-active { 
+    .active.center { 
+        .single-opinion {
+            background: #eaf7f7;
+            &::after {
+                width: 100%;
+                background: linear-gradient( 1deg, rgb(0,222,216) 0%, rgb(0,167,213) 100%);
+            }           
+        }
+    }
+    .owl-nav.disabled {
+        display: none;
+    }
+}
+
+
 
 // Opinion area end 
 // pricing plan area start
